scrollbar fixes

--- a/app/globals.css
+++ b/app/globals.css
@@ -44,7 +44,7 @@
         @apply bg-transparent;
     }
     ::-webkit-scrollbar-thumb {
-        @apply bg-ring/10 hover:bg-ring/80 border-2 border-transparent rounded-2xl bg-clip-content;
+        @apply bg-ring/50 hover:bg-ring/80 border-2 border-transparent rounded-2xl bg-clip-content;
     }
     ::-webkit-scrollbar-corner {
         @apply bg-transparent;
